feat(api): add search for bibliographic metadata
    - POST search endpoint
    - controller get-record-format take more than one id
    - children add to v_bibliographic_metadata
    - change to marc generation for italy
    - add children (issue) in collection (for italy)
